@@ -10,6 +10,9 @@
 
 #include <ctype.h>
 #include <stdio.h>
+#ifdef HAVE_STDLIB_H
+#include <stdlib.h>
+#endif
 
 #include "bw.h"
 #include "blocks.h"
